[gd_scene load_steps=6 format=3 uid="uid://0lj3qejewwsp"]

[ext_resource type="Script" uid="uid://drpaxx3da40cr" path="res://Menus/settings_menu.gd" id="1_8x3wo"]
[ext_resource type="Script" uid="uid://doa6b45eovwep" path="res://Menus/master_volume.gd" id="1_safvx"]
[ext_resource type="FontFile" uid="uid://dm0dxsqey34lo" path="res://Assets/Font/PublicPixel.otf" id="4_4aufd"]
[ext_resource type="PackedScene" uid="uid://drp0qspxr64n0" path="res://Menus/Selector/Selector.tscn" id="4_re3ym"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_re3ym"]

[node name="SettingsMenu" type="Control" node_paths=PackedStringArray("selector", "volume_sliders")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8x3wo")
selector = NodePath("Selector")
volume_sliders = {
"master_volume": NodePath("PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume/MasterSlider"),
"music_volume": NodePath("")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.435294)

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_re3ym")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="SettingsMenuContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="PanelContainer/CenterContainer/SettingsMenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4aufd")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator" type="MarginContainer" parent="PanelContainer/CenterContainer/SettingsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="MasterVolume" type="VBoxContainer" parent="PanelContainer/CenterContainer/SettingsMenuContainer" node_paths=PackedStringArray("volume_slider")]
layout_mode = 2
script = ExtResource("1_safvx")
bus_name = "Master"
volume_slider = NodePath("MasterSlider")

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4aufd")
text = "Main Volume"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="Seperator2" type="MarginContainer" parent="PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Seperator3" type="MarginContainer" parent="PanelContainer/CenterContainer/SettingsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Seperator4" type="MarginContainer" parent="PanelContainer/CenterContainer/SettingsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="ReturnButton" type="Button" parent="PanelContainer/CenterContainer/SettingsMenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4aufd")
text = "Return"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/SettingsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="Selector" parent="." instance=ExtResource("4_re3ym")]
visible = false
layout_mode = 0

[connection signal="mouse_entered" from="PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume/MasterSlider" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume/MasterSlider" to="." method="_on_mouse_exited"]
[connection signal="value_changed" from="PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume/MasterSlider" to="PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume" method="_on_volume_slider_value_changed"]
[connection signal="mouse_entered" from="PanelContainer/CenterContainer/SettingsMenuContainer/ReturnButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/CenterContainer/SettingsMenuContainer/ReturnButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer/CenterContainer/SettingsMenuContainer/ReturnButton" to="." method="_on_return_button_pressed"]
